# cliTools

./: .gitignore  .goreleaser.yaml  Justfile  LICENSE  PROGRESS.md  README.md  RELEASING.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: CLI Tool Ideas for Beginners.md  Feasible CLI Tools.md  README.md
tools/go/: go.work
tools/go/killport/: README.md  go.mod  main.go
tools/rust/: Cargo.toml
tools/rust/pips/: Cargo.toml  README.md
tools/rust/pips/src/: main.rs
tools/rust/sizehog/: Cargo.toml
tools/rust/sizehog/src/: main.rs
tools/rust/upwait/: Cargo.toml  README.md
tools/rust/upwait/src/: main.rs
website/: package-lock.json  package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
website/app/tools/: page.tsx
website/components/layout/: Footer.tsx  Nav.tsx
website/components/providers/: SmoothScrollProvider.tsx
website/components/sections/: ComingSoon.tsx  Craft.tsx  FeaturedPips.tsx  Hero.tsx  InstallCTA.tsx  Positioning.tsx  ReviewBlock.tsx  ToolGrid.tsx  ToolsSubNav.tsx
website/components/terminal/: Terminal.tsx  buildFrames.ts  types.ts  useTerminalScript.ts
website/components/ui/: Button.tsx  CopyCommand.tsx  InstallTabs.tsx  MagneticButton.tsx  Reveal.tsx  Scramble.tsx
website/data/: site.ts  tools.ts
website/lib/: gsap.ts
