# Cargo *workspace* (virtual manifest — no package of its own).
# Each Rust tool is a member crate; add new ones to `members`.
[workspace]
resolver = "2"
members = ["sizehog"]

# --- cargo-dist (the `dist` tool) — builds cross-platform binaries + installers ---
# Docs: https://opensource.axo.dev/cargo-dist/
# `cargo-dist-version` is normally set for you by `dist init`; adjust to match your
# installed `dist --version`.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = ["github"]                 # generate a GitHub Actions release workflow
installers = ["shell"]          # curl | sh installer; add "homebrew" later
targets = [
    "aarch64-apple-darwin",     # Apple Silicon Mac
    "x86_64-apple-darwin",      # Intel Mac
    "x86_64-unknown-linux-gnu", # Linux
    "x86_64-pc-windows-msvc",   # Windows
]

# cargo-dist builds release binaries under this profile.
[profile.dist]
inherits = "release"
lto = "thin"
