# Cargo *workspace* (virtual manifest — no package of its own).
# Each Rust tool is a member crate; add new ones to `members`.
[workspace]
resolver = "2"
members = ["sizehog"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# cargo-dist builds release binaries under this profile.
[profile.dist]
inherits = "release"
lto = "thin"
