# Cargo *workspace* (virtual manifest — no package of its own).
# Each Rust tool is a member crate; add new ones to `members`.
[workspace]
resolver = "2"
members = ["sizehog", "pips", "upwait"]

# NOTE: dist config now lives in the repo-root `dist-workspace.toml`.
# Only the build profile stays here (profiles must be in Cargo.toml).

# cargo-dist builds release binaries under this profile.
[profile.dist]
inherits = "release"
lto = "thin"
